--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/bredele/react-states-machine/issues"
   },
+  "dependencies": {
+    "react": "^16.2.0"
+  },
   "homepage": "https://github.com/bredele/react-states-machine#readme"
 }
