--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React finite state machine done right",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,13 @@
   "dependencies": {
     "react": "^16.2.0"
   },
-  "homepage": "https://github.com/bredele/react-states-machine#readme"
+  "homepage": "https://github.com/bredele/react-states-machine#readme",
+  "devDependencies": {
+    "babel-jest": "^22.2.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "jest": "^22.2.2",
+    "react-test-renderer": "^16.2.0",
+    "react-dom": "^16.2.0"
+  }
 }
